Fix overflow issue

--- a/main.tex
+++ b/main.tex
@@ -1340,7 +1340,7 @@ In this section we show that the covariant cwf structure on $\operatorname{Coa} 
   Let $\mathcal{C}$ be a covariant cwf with an empty context and context extension.
   If $\mathcal{C}$ supports any of finite product types, extensional equality types, dependent product or dependent sums, then so does $\operatorname{Core} \mathcal{C}$, and they are preserved by the inclusion $\operatorname{Core} \mathcal{C} \hookrightarrow \mathcal{C}$.
 
-  If $\mathcal{C}$ supports unit and dependent sum types, then $\operatorname{Core} \mathcal{C}$ is democratic \citep{biequivalence-lcc-cwf}, i.e.\@ every context is isomorphic to a context obtained from the empty context by a single context extension.
+  If $\mathcal{C}$ supports unit and dependent sum types, then $\operatorname{Core} \mathcal{C}$ is democratic, i.e.\@ every context is isomorphic to a context obtained from the empty context by a single context extension \citep{biequivalence-lcc-cwf}.
   \qed
 \end{lemma}
 
